--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,23 @@
 <resources>
+    <!-- Main menu -->
     <string name="app_name">Mental Counting</string>
     <string name="play">Play</string>
     <string name="score" translatable="false">Scores</string>
+
+    <!-- Score page -->
     <string name="number_of_operations">Number of operations: XX</string>
     <string name="success_rate">Success rate: XXX%</string>
     <string name="last_correct_operation">Last correct operation: XXXXXXXXXX</string>
     <string name="return_to_last">Return to last page</string>
-    <string name="operation"> Operation:</string>
+
+    <!-- Mental Counting page -->
+    <string name="operation"> Operation: XXX</string>
     <string name="correct_answer">Correct answer !</string>
     <string name="incorrect_answer">Incorrect answer !</string>
     <string name="submit">Submit</string>
     <string name="main_menu">Main menu</string>
+
+    <!-- Menu -->
+    <string name="menu_score" translatable="false">Scores</string>
+    <string name="clear_scores">Clear Scores</string>
 </resources>
