--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="hard_mode">Hard Mode</string>
 
     <!-- Mental Counting page -->
-    <string name="operation"> Operation: XXX</string>
+    <string name="operation"> Operation: </string>
     <string name="correct_answer">Correct answer !</string>
     <string name="incorrect_answer">Incorrect answer !</string>
     <string name="submit">Submit</string>
