--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,16 +15,20 @@
     <string name="hard_mode">Hard Mode</string>
 
     <!-- Mental Counting page -->
-    <string name="operation"> Operation: </string>
+    <string name="operation"></string>
     <string name="correct_answer">Correct answer !</string>
     <string name="incorrect_answer">Incorrect answer !</string>
     <string name="submit">Submit</string>
+    <string name="next_button">Next Calculation</string>
     <string name="main_menu">Main menu</string>
+    <string name="easy_operationTemplate" translatable="false">%1$d %2$s %3$d</string>
+    <string name="hard_operationTemplate" translatable="false">%1$d %2$s %3$d %4$s %5$d</string>
 
     <!-- Menu -->
     <string name="menu_score" translatable="false">Scores</string>
     <string name="clear_scores">Clear Scores</string>
     <string name="answer_hint" translatable="false">123</string>
+
 
 
 </resources>
